Commit_12 Debug and Test